# fed-llm-fintuning-and-blockchain

./: .gitignore  =0.3.0  README.md  loss_values.txt  losses.py  plotter.py  plotter2.py  plotter3.py  plotter4.py  plotter6.py  pyproject.toml  pytorch-test.py  requirements.txt  script.sh  slurm-25483518.out  test.py  training_logs.txt
all_losses/alpaca_gpt4/llama3_1_16bit/: all_losses.txt
all_losses/alpaca_gpt4/llama3_1_8b_4bit_42024-10-07_10-21-19/: all_losses.txt
all_losses/alpaca_gpt4/llama3_1_8b_4bit_42024-10-07_13-54-58/: all_losses.txt
all_losses/alpaca_gpt4/llama3_2_3b_16bit_42024-10-07_13-24-21/: all_losses.txt
all_losses/alpaca_gpt4/llama3_2_3b_4bit_42024-10-07_09-33-03/: all_losses.txt
all_losses/alpaca_gpt4/llama3_2_3b_4bit_42024-10-07_10-04-21/: all_losses.txt
all_losses/alpaca_gpt4/llama_2_13b_16bit_42024-10-07_13-24-54/: all_losses.txt
all_losses/alpaca_gpt4/llama_2_13b_4bit_42024-10-07_11-08-56/: all_losses.txt
all_losses/alpaca_gpt4/llama_3_1_70b_42024-10-07_14-27-05/: all_losses.txt
all_losses/alpaca_gpt4/mistral12bb_4bit_42024-10-07_13-21-33/: all_losses.txt
all_losses/alpaca_gpt4/mistral_16bit_nemo_42024-10-07_13-26-08/: all_losses.txt  l.txt
all_losses/alpaca_gpt4/normal/: llama_3_1_8b_4bit.txt
all_losses/databricks_dolly_15k/llama3_1_8b_4bit_42024-10-08_12-31-42/: all_losses.txt
all_losses/databricks_dolly_15k/llama3_2_3b_16bit_162024-10-08_15-12-54/: all_losses.txt
all_losses/databricks_dolly_15k/llama3_2_3b_4bit_42024-10-08_10-34-12/: all_losses.txt
all_losses/databricks_dolly_15k/llama_2_13b_16bit_162024-10-08_12-41-23/: all_losses.txt
all_losses/databricks_dolly_15k/llama_2_13b_4bit_42024-10-08_12-01-24/: all_losses.txt
all_losses/databricks_dolly_15k/llama_3_1_16bit_162024-10-08_13-16-14/: all_losses.txt
all_losses/databricks_dolly_15k/mistral12bb_4bit_42024-10-08_12-19-23/: all_losses.txt
all_losses/databricks_dolly_15k/mistral_16bit_nemo_162024-10-08_13-27-54/: all_losses.txt
all_losses/databricks_dolly_15k/normal_losses/: llama2_13b_16bit.txt  (+7 more)
flowertune_llm/: client_app.py  dataset.py  models.py  server_app.py
(+24 files in other folders)
